<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FFF0"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cBLembrar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >      
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_gravity="center_horizontal" >
	        
            <Button
	            android:id="@+id/btVoltar"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="voltarPressed"	            
	            android:text="@string/back" />
	        
	        <Button
	            android:id="@+id/buttonAcessar"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="clickAcessar"
	            android:text="@string/str_acessar" />
	    </LinearLayout>
		
        <Button
            android:id="@+id/buttonSair"            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:onClick="clickSair"
            android:text="@string/str_sair" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cBLembrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_marginBottom="15dp"
        android:text="@string/str_lembrar_usuario" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtSenha"
        android:layout_alignLeft="@+id/edtSenha"
        android:text="@string/str_senha" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtLogin"
        android:layout_alignLeft="@+id/edtLogin"
        android:layout_marginBottom="3dp"
        android:text="@string/str_login" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:contentDescription="@string/ifpe_logo_description"
        android:src="@drawable/ic_login" />

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/edtSenha"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

</RelativeLayout>